--- a/searchNBSS.ipynb
+++ b/searchNBSS.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,13 @@
     "from pydicom.pixel_data_handlers.util import apply_voi_lut\n",
     "from  matplotlib import pyplot as plot\n",
     "\n",
-    "import cv2\n"
+    "import cv2\n",
+    "import csv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#episode_type = {SCREENING,BIOPSYWIDE,ASSESSMENT }\n",
+    "system_type = ['HOLOGIC', 'SIEMENS', 'GE']\n",
+    "#classification_type = 'NORMAL'}\n",
+    "debug = True\n",
+    "ER = 0\n",
+    "PR = 1\n",
+    "HER2 = 2\n",
+    "normal_roi_size = 150 # size of a normal ROI\n",
+    "normal_roi_noise = 500 #random noise to obtain the normal ROI from the center. \n",
+    "extra_size = 50 # adding 50 pixels around the lesion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clients = ['demd2', 'demd3']\n",
+    "# clients = ['demd100018', 'demd128247', 'demd843','demd94678'] # second test. \n",
+    "# db = omidb.DB(reading_path, clients= clients)\n",
+    "\n",
+    "db = omidb.DB(reading_path) # all clients\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,69 +101,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_overlapping1D(bbox1, bbox2):\n",
-    "    return bbox1.x2 >= bbox2.x1 and bbox2.x2 >= bbox1.x1\n",
+    "    return bbox1[1] >= bbox2[0] and bbox2[1] >= bbox1[0]\n",
     "\n",
     "def is_overlapping2D(bbox1, bbox2):\n",
-    "    box1.x = (bbox1.x1, bbox1.x2)\n",
-    "    box1.y = (bbox1.y1, bbox1.y2)\n",
-    "    box2.x = (bbox2.x1, bbox2.x2)\n",
-    "    box2.y = (bbox2.y1, bbox2.y2)\n",
-    "    \n",
-    "    return isOverlapping1D(box1.x, box2.x) and isOverlapping1D(box1.y, box2.y)\n",
-    "    "
+    "   \n",
+    "    return is_overlapping1D([bbox1.x1, bbox1.x2], [bbox2.x1, bbox2.x2]) \\\n",
+    "       and is_overlapping1D([bbox1.y1, bbox1.y2], [bbox2.y1, bbox2.y2]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_random_bbox(bbox, bbox_roi,mask):\n",
+    "    dims = mask.shape\n",
+    "    center_x =np.round((bbox.x2 - bbox.x1)/2).astype(int) # center of the image\n",
+    "    center_y =np.round((bbox.y2 - bbox.y1)/2).astype(int) # center of the image\n",
+    "    idx = 0\n",
+    "    found = False\n",
+    "    while not found and idx < 100 : \n",
+    "        x = center_x + np.random.randint(-normal_roi_noise, +normal_roi_noise)\n",
+    "        y = center_y + np.random.randint(-normal_roi_noise, +normal_roi_noise)\n",
+    "        y1 = np.maximum(y- normal_roi_size,0)\n",
+    "        y2 = np.minimum(y+ normal_roi_size,dims[0])\n",
+    "        x1 = np.maximum(x- normal_roi_size,0)\n",
+    "        x2 = np.minimum(x+ normal_roi_size,dims[1])\n",
+    "        bbox_random = omidb.mark.BoundingBox(x1,y1,x2,y2)\n",
+    "        mask2 = mask.copy()\n",
+    "        mask2[:] = 0\n",
+    "        mask2[bbox_random.y1 : bbox_random.y2,bbox_random.x1:bbox_random.x2] = 255\n",
+    "        mask2[bbox_roi.y1 : bbox_roi.y2,bbox_roi.x1:bbox_roi.x2] = 128       \n",
+    "        \n",
+    "        # print(\"roi bbox \", bbox_roi)\n",
+    "        # print(\"random bbox \", bbox_random)\n",
+    "#         plot.imshow(mask2,'gray')\n",
+    "#         plot.show()\n",
+    "#         plot.imshow(mask,'gray')\n",
+    "#         plot.show()\n",
+    "        found = not (is_overlapping2D (bbox_random,bbox_roi) or x1 ==0 or y1 ==0)\n",
+    "        # apply bitwise on the inverse background (mask) and check all is inside the breast.         \n",
+    "        and_image = cv2.bitwise_and(mask2,(255-mask))\n",
+    "        if np.sum(and_image[:]>0): found = False; #out of the limis of the breast. \n",
+    "        idx +=1\n",
+    "        #print(\"found \",found)\n",
+    "        #input(\"Press Enter to continue...\")\n",
+    "    if not found: print(\"*** Could not get a Normal random ROI after 100 iterations\")\n",
+    "    return bbox_random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_normal_BBox (image,bbox):\n",
     "    #threshold image \n",
-    "    #ret,thresh1 = cv.threshold(img,127,255,cv.THRESH_TOZERO)\n",
-    "    img = cv2.threshold(image, 5, 255, cv2.THRESH_BINARY)[1]  # ensure binary\n",
-    "    plot.imshow(img,'gray')#,vmin=0,vmax=255))\n",
-    "    plot.figure()\n",
+    "    img = cv2.threshold(image, 0, 255, cv2.THRESH_BINARY)[1]  # ensure binary\n",
+    "#     plot.imshow(img,'gray')#,vmin=0,vmax=255))\n",
+    "#     plot.show()\n",
     "    nb_components, output, stats, centroids = cv2.connectedComponentsWithStats(img, connectivity=4)\n",
     "    sizes = stats[:, -1]\n",
-    "    x = 250 \n",
-    "    y = 250\n",
-    "    w = 100\n",
-    "    h = 100\n",
     "    max_label = 1\n",
     "    max_size = sizes[1]\n",
     "    for i in range(2, nb_components):\n",
     "        if sizes[i] > max_size:\n",
     "            max_label = i\n",
     "            max_size = sizes[i]\n",
-    "\n",
     "    img2 = np.zeros(output.shape,dtype=np.uint8)\n",
     "    img2[output == max_label] = 255\n",
-    "    plot.imshow(img2,'gray')\n",
-    "    plot.figure()\n",
-    "    print(img2.dtype)\n",
-    "    contours, hierarchy = cv2.findContours(img2,cv2.RETR_LIST,cv2.CHAIN_APPROX_SIMPLE)[-2:]\n",
-    "    idx =0 \n",
-    "    for cnt in contours:\n",
-    "        idx += 1\n",
-    "        x,y,w,h = cv2.boundingRect(cnt)\n",
-    "        #roi=im[y:y+h,x:x+w]\n",
-    "        #cv2.imwrite(str(idx) + '.jpg', roi)\n",
-    "        cv2.rectangle(img2,(x,y),(x+w,y+h),(200,0,0),2)\n",
-    "        plot.imshow(img2)\n",
-    "        \n",
-    "    bbox.x1 = x\n",
-    "    bbox.x2 = x+w\n",
-    "    bbox.y1 = y\n",
-    "    bbox.y2 = y+h\n",
+    "#     plot.imshow(img2,'gray')\n",
+    "#     plot.show()\n",
+    "#     input(\"Press Enter to continue...\")\n",
+    "    contours, hierarchy = cv2.findContours(img2,cv2.RETR_TREE,cv2.CHAIN_APPROX_NONE)\n",
+    "\n",
+    "    cnt = contours[0]\n",
+    "    aux_im = img2\n",
+    "    x,y,w,h = cv2.boundingRect(cnt)\n",
+    "    cv2.rectangle(aux_im,(x,y),(x+w,y+h),(255,0,0),5)\n",
+    "#     plot.imshow(aux_im)\n",
+    "#     plot.show()\n",
+    "    #input(\"Press Enter to continue...\")\n",
+    "    out_bbox = omidb.mark.BoundingBox(x, y, x+w, y+h)\n",
     "    \n",
-    "    return bbox"
+    "    return out_bbox, img2 # returns bounding box and mask image. "
    ]
   },
   {
@@ -149,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,34 +250,54 @@
     "\n",
     "    # Convert to uint\n",
     "    image_2d_scaled = np.uint8(image_2d_scaled)\n",
-    "\n",
-    "    # Write the PNG file\n",
-    "    aux_folder = output_path+\"/\"+str(scanner)+\"/ffdm/st\"+subtype+\"/\"+ filename\n",
-    "    print(aux_folder)\n",
-    "    aux_im = image_2d_scaled\n",
-    "    if (side=='R'): aux_im =cv2.flip(aux_im, 1)\n",
-    "    cv2.imwrite(aux_folder,aux_im)\n",
-    "    \n",
+    "    if (side=='R'): image_2d_scaled =cv2.flip(image_2d_scaled, 1)\n",
+    "    dims = image_2d_scaled.shape\n",
+    "    print(\"dimension\",dims)\n",
+    "   \n",
     "    # get ROI from mask\n",
     "     # Write the PNG file\n",
     "    aux_folder = output_path+\"/\"+str(scanner)+\"/roi/st\"+subtype+\"/\"+ filename\n",
     "    for mark in image.marks:\n",
-    "        print(mark.boundingBox)\n",
-    "        bbox = mark.boundingBox # bounding box in optimam is x1,y1 x2,y2\n",
+    "        bbox_roi = mark.boundingBox\n",
+    "        if (side=='R'): # mirrowing the marks\n",
+    "            aux = bbox_roi.x2 \n",
+    "            bbox_roi.x2 = dims[1]-mark.boundingBox.x1 \n",
+    "            bbox_roi.x1 = dims[1]-aux \n",
+    "        print(\"bbox_roi\",bbox_roi)\n",
     "        #print(type(bbox))\n",
-    "        image_crop = image_2d_scaled[bbox.y1:bbox.y2,bbox.x1:bbox.x2]\n",
-    "        if (side=='R'): image_crop =cv2.flip(image_crop, 1)\n",
-    "        cv2.imwrite(aux_folder,image_crop)\n",
+    "        #adding an extra_size around the lesion.\n",
+    "        y1 = np.maximum(bbox_roi.y1-extra_size,0)\n",
+    "        y2 = np.minimum(bbox_roi.y2+extra_size,dims[0])\n",
+    "        x1 = np.maximum(bbox_roi.x1-extra_size,0)\n",
+    "        x2 = np.minimum(bbox_roi.x2+extra_size,dims[1])\n",
     "        \n",
-    "#     #get normal ROI\n",
-    "        aux_folder = output_path+\"/\"+str(scanner)+\"/normal_roi/st\"+subtype+\"/\"+ filename\n",
-    "        for mark in image.marks:\n",
-    "            print(\"boundig box\")\n",
-    "            bbox = get_normal_BBox(image_2d_scaled,bbox)\n",
-    "#         #print(type(bbox))\n",
-    "            image_crop = image_2d_scaled[bbox.y1:bbox.y2,bbox.x1:bbox.x2]\n",
-    "            if (side=='R'): image_crop =cv2.flip(image_crop, 1)\n",
-    "            cv2.imwrite(aux_folder,image_crop)\n",
+    "        image_crop = image_2d_scaled[y1:y2,x1:x2]\n",
+    "\n",
+    "        cv2.imwrite(aux_folder,image_crop)\n",
+    "\n",
+    "    #     #get normal ROI\n",
+    "    # TODO if tehy have more than one mark put it in the asme loop. \n",
+    "    aux_folder = output_path+\"/\"+str(scanner)+\"/normal_roi/st\"+subtype+\"/\"+ filename\n",
+    "    for mark in image.marks:\n",
+    "        bbox,mask = get_normal_BBox(image_2d_scaled,bbox_roi)\n",
+    "        #print(bbox)\n",
+    "        # get_random_bbox(bbox)\n",
+    "        bbox_norm = get_random_bbox(bbox, bbox_roi,mask)\n",
+    "        image_crop = image_2d_scaled[bbox_norm.y1:bbox_norm.y2,bbox_norm.x1:bbox_norm.x2]\n",
+    "        cv2.imwrite(aux_folder,image_crop)\n",
+    "\n",
+    "    aux_folder = output_path+\"/\"+str(scanner)+\"/ffdm/st\"+subtype+\"/\"+ filename\n",
+    "    print(aux_folder)        \n",
+    "    # Write the PNG file\n",
+    "    image_crop = image_2d_scaled[bbox.y1:bbox.y2,bbox.x1:bbox.x2]\n",
+    "    cv2.imwrite(aux_folder,image_crop)\n",
+    "    \n",
+    "    # write CSV \n",
+    "    with open(output_path+'/omidb-selection.csv', 'a+', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow([client,subtype, episode, image.id, filename, side, scanner, bbox, bbox_roi, extra_size])\n",
+    "\n",
+    "        \n",
     "    \n",
     "               \n",
     "    \n",
@@ -234,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +342,7 @@
     "                                if value_st == 'RP':\n",
     "                                    subtype[ER]= True\n",
     "                                elif value_st == 'RN':\n",
-    "                                    subtype[ER]= True\n",
+    "                                    subtype[ER]= False\n",
     "                                else: print(\"*** ER Status NA\",value_st);not_known = True;\n",
     "                            if (key_st=='HormonePRStatus'):   \n",
     "                                if value_st == 'RP':\n",
@@ -277,59 +358,10 @@
     "                                    subtype[HER2]= False\n",
     "                                else: print (\"*** HER2 status NA\",value_st);not_known = True;\n",
     "                                #print(key_st, value_st)\n",
+    "#                 else: print(\"*** Side unknown\", key1)\n",
     "                        \n",
     "    return subtype, side, not_known\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#episode_type = {SCREENING,BIOPSYWIDE,ASSESSMENT }\n",
-    "system_type = ['HOLOGIC', 'SIEMENS', 'GE']\n",
-    "#classification_type = 'NORMAL'}\n",
-    "debug = True\n",
-    "ER = 0\n",
-    "PR = 1\n",
-    "HER2 = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients = ['demd2', 'demd3']\n",
-    "db = omidb.DB('/media/robert/ICEBERG_1/img/optimam/image_db', clients= clients)\n",
-    "\n",
-    "#db = omidb.DB('/media/robert/ICEBERG_1/img/optimam/image_db')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#clients = [client for client in db]\n",
-    "#[print(client.id) for client in clients]\n",
-    "\n"
    ]
   },
   {
@@ -353,6 +385,11 @@
     "#\n",
     "overall = stats(0,0,0)\n",
     "copied_count = stats(0,0,0)\n",
+    "# write CSV \n",
+    "with open(output_path+'/omidb-selection.csv', 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow([\"client\",\"subtype\", \"episode\", \"image\", \"filename\",\"side\", \"scanner\", \"bbox\", \"bbox_roi\", \"extra_size\"])\n",
+    "\n",
     "for client in db:\n",
     "    print(client.status) # interested in 'M' or CI interval cancer?\n",
     "    if (client.status==client.status.M):\n",
@@ -381,7 +418,7 @@
     "                # recover the malignacy score for the episode\n",
     "                subtype, side, not_known = get_subtype_from_event(episode)\n",
     "                if (side =='U'):\n",
-    "                    print(\"*** Side U\")\n",
+    "                    print(\"*** Side U\", client.id, episode.id)\n",
     "                if (not_known):\n",
     "                    print(\"subtype unkown\")\n",
     "                else:\n",
@@ -424,20 +461,6 @@
     "print(\"SUMMARY copied  \", copied_count)\n",
     "print(\"SUMMARY overall \", overall)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
